# BeamAnalyzer

./: README.md  example_usage.py  pyproject.toml
documentation/: DeflectionCalculator_Documentation.md  SystemBuilder_Documentation.md
src/: beam_analyzer.py  deflection_calculator.py  systembuilder.py
src/loadcalculator/: __init__.py  beam_analyzer.py  deflection_calculator.py  loads.py  plotter.py  reactionsolver.py  supports.py  systembuilder.py  systemsolver.py  units.py
src/loadcalculator/tests/: beam_analyzer_test.py  deflection_calculator_test.py  reactionsolver_test.py  systemslover_test.py
src/tests/: deflection_calculator_test.py  loads_test.py  subsystem_creation_test.py  systemslover_test.py
tests/: deflection_calculator_test.py  loads_test.py  reactionsolver_test.py  subsystem_creation_test.py
